--- a/dynamic_dashboard/requirements.txt
+++ b/dynamic_dashboard/requirements.txt
@@ -1,3 +1,162 @@
-dash
-rdflib
-# Add any other required packages here
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+abseil-cpp=20220623.0=h0e60522_0
+arrow-cpp=11.0.0=h57928b3_5_cpu
+asn1crypto=1.5.1=pyhd8ed1ab_0
+asttokens=2.4.1=pyhd8ed1ab_0
+aws-c-auth=0.7.4=hd571b1d_2
+aws-c-cal=0.6.2=hd5965a7_2
+aws-c-common=0.9.3=hcfcfb64_0
+aws-c-compression=0.2.17=hd5965a7_3
+aws-c-event-stream=0.3.2=hef061cf_2
+aws-c-http=0.7.13=h064cb6d_2
+aws-c-io=0.13.33=ha16e049_0
+aws-c-mqtt=0.9.7=h37bb463_0
+aws-c-s3=0.3.17=h263813f_4
+aws-c-sdkutils=0.1.12=hd5965a7_2
+aws-checksums=0.1.17=hd5965a7_2
+aws-crt-cpp=0.24.2=h84553ab_2
+aws-sdk-cpp=1.10.57=h45a597c_24
+backports=1.0=pyhd8ed1ab_3
+backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
+blas=1.0=mkl
+boost-cpp=1.78.0=h5b4e17d_0
+bottleneck=1.3.5=py311h5bb9823_0
+brotli-python=1.0.9=py311hd77b12b_7
+bzip2=1.0.8=he774522_0
+c-ares=1.21.0=hcfcfb64_0
+ca-certificates=2023.08.22=haa95532_0
+certifi=2023.7.22=pypi_0
+cffi=1.16.0=py311ha68e1ae_0
+chardet=5.2.0=pypi_0
+charset-normalizer=3.3.2=pyhd8ed1ab_0
+click=8.1.7=py311haa95532_0
+colorama=0.4.6=py311haa95532_0
+comm=0.1.4=pyhd8ed1ab_0
+cryptography=41.0.5=pypi_0
+dash=2.7.0=py311haa95532_0
+debugpy=1.8.0=py311h12c1d0e_1
+decorator=5.1.1=pyhd8ed1ab_0
+exceptiongroup=1.1.3=pyhd8ed1ab_0
+executing=2.0.1=pyhd8ed1ab_0
+expat=2.5.0=hd77b12b_0
+filelock=3.13.1=pyhd8ed1ab_0
+flask=2.2.2=py311haa95532_0
+flask-compress=1.13=py311haa95532_0
+gflags=2.2.2=ha925a31_1004
+glog=0.6.0=h4797de2_0
+greenlet=2.0.1=py311hd77b12b_0
+grpc-cpp=1.51.1=h9c18f36_1
+idna=3.4=pyhd8ed1ab_0
+importlib-metadata=6.8.0=pyha770c72_0
+importlib_metadata=6.8.0=hd8ed1ab_0
+intel-openmp=2023.1.0=h59b6b97_46319
+ipykernel=6.26.0=pyha63f2e9_0
+ipython=8.17.2=pyh5737063_0
+isodate=0.6.1=pypi_0
+itsdangerous=2.0.1=pyhd3eb1b0_0
+jaraco-classes=3.3.0=pypi_0
+jedi=0.19.1=pyhd8ed1ab_0
+jinja2=3.1.2=py311haa95532_0
+jupyter_client=8.6.0=pyhd8ed1ab_0
+jupyter_core=5.5.0=py311h1ea47a8_0
+keyring=24.2.0=pypi_0
+krb5=1.21.2=heb0366b_0
+libabseil=20220623.0=cxx17_h1a56200_6
+libabseil-static=20220623.0=cxx17_h838dfd9_6
+libarrow=11.0.0=hbddb5ef_5_cpu
+libbrotlicommon=1.0.9=hcfcfb64_9
+libbrotlidec=1.0.9=hcfcfb64_9
+libbrotlienc=1.0.9=hcfcfb64_9
+libcrc32c=1.1.2=h0e60522_0
+libcurl=8.4.0=hd5e4a3a_0
+libevent=2.1.12=h3671451_1
+libffi=3.4.4=hd77b12b_0
+libgoogle-cloud=2.7.0=h5fc25aa_1
+libgrpc=1.51.1=hb074f84_1
+libprotobuf=3.21.12=h12be248_2
+libsodium=1.0.18=h8d14728_1
+libssh2=1.11.0=h7dfc565_0
+libthrift=0.18.0=h9ce19ad_0
+libutf8proc=2.8.0=h82a8f57_0
+libzlib=1.2.13=hcfcfb64_5
+lz4-c=1.9.4=hcfcfb64_0
+markupsafe=2.1.1=py311h2bbff1b_0
+matplotlib-inline=0.1.6=pyhd8ed1ab_0
+mkl=2023.1.0=h6b88ed4_46357
+mkl-service=2.4.0=py311h2bbff1b_1
+mkl_fft=1.3.8=py311h2bbff1b_0
+mkl_random=1.2.4=py311h59b6b97_0
+more-itertools=10.1.0=pypi_0
+nest-asyncio=1.5.8=pyhd8ed1ab_0
+numexpr=2.8.7=py311h1fcbade_0
+numpy=1.26.0=py311hdab7c0b_0
+numpy-base=1.26.0=py311hd01c5d8_0
+openssl=3.1.4=hcfcfb64_0
+orc=1.8.2=hada7b9e_2
+oscrypto=1.2.1=pyhd3deb0d_0
+packaging=23.2=pyhd8ed1ab_0
+pandas=2.0.3=pypi_0
+parquet-cpp=1.5.1=2
+parso=0.8.3=pyhd8ed1ab_0
+pickleshare=0.7.5=py_1003
+pip=23.3=py311haa95532_0
+platformdirs=3.8.1=pyhd8ed1ab_0
+plotly=5.9.0=py311haa95532_0
+prompt-toolkit=3.0.39=pyha770c72_0
+prompt_toolkit=3.0.39=hd8ed1ab_0
+psutil=5.9.5=py311ha68e1ae_1
+pure_eval=0.2.2=pyhd8ed1ab_0
+pyarrow=10.0.1=pypi_0
+pycparser=2.21=pyhd8ed1ab_0
+pycryptodomex=3.19.0=py311ha68e1ae_1
+pygments=2.16.1=pyhd8ed1ab_0
+pyjwt=2.8.0=pyhd8ed1ab_0
+pyopenssl=23.3.0=pypi_0
+pyparsing=3.1.1=pypi_0
+pysocks=1.7.1=pyh0701188_6
+python=3.11.5=he1021f5_0
+python-dateutil=2.8.2=pyhd3eb1b0_0
+python-tzdata=2023.3=pyhd3eb1b0_0
+python_abi=3.11=2_cp311
+pytz=2023.3.post1=py311haa95532_0
+pywin32=306=py311h12c1d0e_2
+pywin32-ctypes=0.2.2=pypi_0
+pyzmq=25.1.1=py311h9250fbb_2
+rdflib=7.0.0=pypi_0
+re2=2023.02.01=h63175ca_0
+requests=2.31.0=pyhd8ed1ab_0
+setuptools=68.0.0=py311haa95532_0
+six=1.16.0=pyhd3eb1b0_1
+snappy=1.1.10=hfb803bf_0
+snowflake-connector-python=3.4.0=py311h32ab5c6_0
+snowflake-sqlalchemy=1.5.1=pyhd8ed1ab_0
+sortedcontainers=2.4.0=pyhd8ed1ab_0
+sqlalchemy=1.4.50=pypi_0
+sqlite=3.41.2=h2bbff1b_0
+stack_data=0.6.2=pyhd8ed1ab_0
+tbb=2021.8.0=h59b6b97_0
+tenacity=8.2.2=py311haa95532_0
+tk=8.6.12=h2bbff1b_0
+tomlkit=0.12.2=pyha770c72_0
+tornado=6.3.3=py311ha68e1ae_1
+traitlets=5.13.0=pyhd8ed1ab_0
+typing-extensions=4.7.1=py311haa95532_0
+typing_extensions=4.7.1=py311haa95532_0
+tzdata=2023c=h04d1e81_0
+ucrt=10.0.22621.0=h57928b3_0
+urllib3=1.26.18=pyhd8ed1ab_0
+utf8proc=2.6.1=h2bbff1b_0
+vc=14.2=h21ff451_1
+vc14_runtime=14.36.32532=hdcecf7f_17
+vs2015_runtime=14.36.32532=h05e6639_17
+wcwidth=0.2.9=pyhd8ed1ab_0
+werkzeug=2.2.3=py311haa95532_0
+wheel=0.37.1=pyhd3eb1b0_0
+win_inet_pton=1.1.0=pyhd8ed1ab_6
+xz=5.4.2=h8cc25b3_0
+zeromq=4.3.5=h63175ca_0
+zipp=3.17.0=pyhd8ed1ab_0
+zlib=1.2.13=hcfcfb64_5
+zstd=1.5.5=hd43e919_0
